homework/deploy-gw/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: symryvvin/api-gateway:1.0
          ports:
            - name: web
              containerPort: 8081
